Fix: Correções nas rotas de usuário, e hooks do api.js. Feat: Adição das páginas para a entrega 09/09/26, ForgotPassword, ResetPassword, Register;
